--- a/public/views/article/create.ejs
+++ b/public/views/article/create.ejs
@@ -1,8 +1,40 @@
 <html>
     <head>
-       <titles>Create Article</titles>
+        <title>New Arctile</title>
     </head>
-     <body>
-            <h1>Create Article</h>
-        </body>
+    <body>
+        <h1>New Article</h1>
+        <div>Title:
+        <input type="text" id="title"/>
+        
+        </div>
+        <div>Content:
+        <textarea id="content"></textarea>
+        
+        </div><br>
+   
+        <button id="submit"> Submit</button>
+        
+        <script src="/lib/jquery/dist/jquery.min.js"></script>
+        <script>
+        var article={title:"",content:""};
+        $("#title").change(function(){
+            article.title=$("#title").val();
+        });
+         $("#content").change(function(){
+            article.title=$("#content").val();
+        });
+        
+        $("#submit").click(function(){
+            $.ajax({
+                method:"POST",
+                url:"/api/articles",
+                data:article
+            }).done(function(response){
+                console.log(response);
+            });
+        });
+            
+        </script>
+    </body>
 </html>
