--- a/public/views/article/edit.ejs
+++ b/public/views/article/edit.ejs
@@ -1,8 +1,8 @@
 <html>
     <head>
-       <titles>Edit Article</titles>
+        <title>Edit Arctile</title>
     </head>
-     <body>
-            <h1>Edit Article</h>
-        </body>
+    <body>
+        <h1>Article</h1>
+    </body>
 </html>
