--- a/public/views/article/all.ejs
+++ b/public/views/article/all.ejs
@@ -1,18 +1,25 @@
 <html>
+    
     <head>
-        <title>All Arctile</title>
+        <title>All articles</title>
     </head>
     <body>
-        <h1>Article List</h1>
-        <% console.log(articles) %>
-          <% for(var i=0; i<articles.length; i++) { %>
-          <h1> <%= articles[i]._id %> </h1>
-            <h1> <%= articles[i].title %> </h1>
-            <p>
-              <%= articles[i].user%>
-            </p>
-            <h3><%= articles[i].content%></h3>
-            <h4><%= articles[i].created%></h4>
-            <% } %>
+        
+<h1>All article</h1>
+<% console.log(articles) %>
+  <% for(var i=0; i<articles.length; i++) { %>
+    <h1> <%= articles[i]._id %> </h1>
+    <h1> <%= articles[i].title %> </h1>
+    <p>
+      <%= articles[i].user%>
+    </p>
+    <h3><%= articles[i].content%></h3>
+    <h3><%= articles[i].created%></h3>
+    <% } %>
+
+        
     </body>
+    
+    
+    
 </html>
