--- a/public/views/article/create.ejs
+++ b/public/views/article/create.ejs
@@ -1,40 +1,43 @@
 <html>
     <head>
-        <title>New Arctile</title>
+        <title>Create Arctile</title>
     </head>
     <body>
-        <h1>New Article</h1>
+        <h1>Article</h1>
         <div>Title:
-        <input type="text" id="title"/>
-        
-        </div>
-        <div>Content:
-        <textarea id="content"></textarea>
-        
+                <input type="text" id ="title"/>
         </div><br>
-   
-        <button id="submit"> Submit</button>
+        <div>Content:
+                <textarea id= "content"></textarea>
+        </div><br>
+            <button id ="submit">Submit</button>
         
-        <script src="/lib/jquery/dist/jquery.min.js"></script>
+        
+        <script src="/lib/jquery/dist/jquery.min.js"></script> 
         <script>
-        var article={title:"",content:""};
-        $("#title").change(function(){
-            article.title=$("#title").val();
-        });
-         $("#content").change(function(){
-            article.title=$("#content").val();
-        });
-        
-        $("#submit").click(function(){
-            $.ajax({
-                method:"POST",
-                url:"/api/articles",
-                data:article
-            }).done(function(response){
-                console.log(response);
-            });
-        });
             
+            var article = {title: "", content:""};
+            $("#title").change(function(){
+                article.title = $("#title").val();
+            });
+             $("#content").change(function(){
+                article.content = $("#content").val();
+            });
+            
+            $("#submit").click(function(){
+                console.log(article);
+                $.ajax({
+                    
+                    method: "POST",
+                    url:"/api/articles",
+                    data: article
+                    
+                    
+                }).done(function(response){
+                    console.log(response);
+                });
+            });
         </script>
-    </body>
+        
+        </body>
 </html>
