--- a/public/views/article/view.ejs
+++ b/public/views/article/view.ejs
@@ -7,5 +7,6 @@
         <% console.log(request.article) %>
         <h2> Title: <%= request.article.title %></h2>
         <p> <%= request.article.content %> </p>
+        <p> <%= request.article.created %> </p>
     </body>
 </html>
