--- a/public/views/article/all.ejs
+++ b/public/views/article/all.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>All Arctile</title>
+        <title>All Article</title>
     </head>
     <body>
         <h1>Article List</h1>
