--- a/public/views/article/edit.ejs
+++ b/public/views/article/edit.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Edit Arctile</title>
+        <title>Edit Article</title>
     </head>
     <body>
         <h1>Article</h1>
