--- a/public/views/article/view.ejs
+++ b/public/views/article/view.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Arctile</title>
+        <title>Article</title>
     </head>
     <body>
         <h1>Article</h1>
