--- a/public/views/product/create.ejs
+++ b/public/views/product/create.ejs
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Create Article</title>
+        <title>Create Product</title>
     </head>
     <body>
-        <h1>Article</h1>
+        <h1>Product</h1>
         <div>Title:
                 <input type="text" id ="title"/>
         </div><br>
@@ -16,21 +16,21 @@
         <script src="/lib/jquery/dist/jquery.min.js"></script> 
         <script>
             
-            var article = {title: "", content:""};
+            var product = {title: "", content:""};
             $("#title").change(function(){
-                article.title = $("#title").val();
+                product.title = $("#title").val();
             });
              $("#content").change(function(){
-                article.content = $("#content").val();
+                product.content = $("#content").val();
             });
             
             $("#submit").click(function(){
-                console.log(article);
+                console.log(product);
                 $.ajax({
                     
                     method: "POST",
-                    url:"/api/articles",
-                    data: article
+                    url:"/api/products",
+                    data: product
                     
                     
                 }).done(function(response){
