--- a/public/views/product/all.ejs
+++ b/public/views/product/all.ejs
@@ -1,16 +1,20 @@
+
 <html>
     <head>
         <title>All Product</title>
     </head>
     <body>
-        <h1>Product List</h1>
+        <h1>All Product</h1>
         <% console.log(products) %>
-          <% for(var i=0; i<products.length; i++) { %>
-               <h1> <%= products[i]._id %> </h1>
-            <h1> <%= products[i].title %> </h1>
-          
-              <h3><%= products[i].content%></h3>
-            <h4><%= products[i].created%></h4>
-            <% } %>
+    <% for(var i=0; i<products.length; i++) { %>
+    <h1> <%= products[i].name %> </h1>
+     <h1> <%= products[i]._id %> </h1>
+    <p>
+      <%= products[i].user%>
+    </p>
+    <h3><%= products[i].description%></h3>
+    <h3><%= products[i].price%></h3>
+     <h3><%= products[i].quantity%></h3>
+    <% } %>
     </body>
 </html>
