--- a/public/views/product/create.ejs
+++ b/public/views/product/create.ejs
@@ -3,41 +3,50 @@
         <title>Create Product</title>
     </head>
     <body>
-        <h1>Product</h1>
-        <div>Title:
-                <input type="text" id ="title"/>
-        </div><br>
-        <div>Content:
-                <textarea id= "content"></textarea>
-        </div><br>
-            <button id ="submit">Submit</button>
+        <h1>New Product</h1>
+        <div>Name:
+            <input type="text" id="name"/>
+        </div> <br>
+        <div>Description:
+            <textarea id="description"></textarea>
+        </div> <br>
+        <div>Price:
+            <input type="number" id="price"/>
+        </div> <br>
+        <div>Quantity:
+            <input type="number" id="quantity"/>
+        </div> <br>
+        <button id="submit">Submit</button>
         
-        
-        <script src="/lib/jquery/dist/jquery.min.js"></script> 
+        <script src="/lib/jquery/dist/jquery.min.js"></script>
         <script>
-            
-            var product = {title: "", content:""};
-            $("#title").change(function(){
-                product.title = $("#title").val();
+            var product = {title: "", content: ""};
+            $("#name").change(function(){
+                product.name = $("#name").val();
             });
-             $("#content").change(function(){
-                product.content = $("#content").val();
+            
+            $("#description").change(function(){
+                product.description = $("#description").val();
+            });
+            
+            $("#price").change(function(){
+                product.price = $("#price").val();
+            });
+            
+            $("#quantity").change(function(){
+                product.quantity = $("#quantity").val();
             });
             
             $("#submit").click(function(){
                 console.log(product);
                 $.ajax({
-                    
                     method: "POST",
-                    url:"/api/products",
+                    url: "/api/products",
                     data: product
-                    
-                    
                 }).done(function(response){
                     console.log(response);
                 });
             });
         </script>
-        
-        </body>
+    </body>
 </html>
