--- a/public/views/product/edit.ejs
+++ b/public/views/product/edit.ejs
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>Edit Product</title>
+        <title>edit Article</title>
     </head>
     <body>
-        <h1>Product</h1>
+        <h1>edit Article</h1>
+        <input type="textarea">
     </body>
 </html>
