--- a/public/views/product/view.ejs
+++ b/public/views/product/view.ejs
@@ -4,8 +4,8 @@
     </head>
     <body>
         <h1>Product</h1>
-        <% console.log(request.product) %>
-        <h2> Title: <%= request.product.title %></h2>
+        <% console.log(request.product)%>
+        <h2>title:<%=request.product.title %></h2>
         <p> <%= request.product.content %> </p>
         <p> <%= request.product.created %> </p>
     </body>
