--- a/public/views/product/create.ejs
+++ b/public/views/product/create.ejs
@@ -20,7 +20,7 @@
         
         <script src="/lib/jquery/dist/jquery.min.js"></script>
         <script>
-            var product = {title: "", content: ""};
+            var product = {name: "", description: "", price: "", quantity: ""};
             $("#name").change(function(){
                 product.name = $("#name").val();
             });
